# Challenge_1

./: --library=m  .gitignore  Amijo.cpp  Amijo.hpp  CMakeLists.txt  ExponentialDecay.cpp  ExponentialDecay.hpp  Method.cpp  Method.hpp  UpdateRule.hpp  gradient.cpp  main  vector.cpp  vector.hpp
Source/: Amijo.cpp  Amijo.hpp  InverseDecay.cpp  Makefile  Method.hpp  UpdateRule.hpp  gradient.cpp  gradient.hpp  main.cpp  vector.cpp
Source/Challenge_1/: InverseDecay.hpp  README.md  gradient.hpp  main.cpp  vector.cpp
Source/Challenge_2/: CMakeLists.txt  README.md  comments.md  lnsp_131.mtx:Zone.Identifier  main  main.cpp  make.dep  matrix.hpp  test.txt
